--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <p>futuro_code</p>
     
+<video width="640" height="360" controls>
+  <!-- Aquí irán las fuentes de video y el texto alternativo -->
+      <source src="ruta_del_video.mp4" type="Maroon 5 - Sugar (Official Music Video).mp4">
+</video>
+    
 </body>
 </html>
